--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,4 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://use.fontawesome.com/00c6aa3062.js"></script>
 </html>
