--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>AI Wins (Always)</title>
+    <title>AI Wins (Eventually)</title>
   </head>
   <body>
     <noscript>
