remove import cycle from ttt package

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,7 +40,7 @@
     -->
   </body>
   <script src="https://use.fontawesome.com/00c6aa3062.js"></script>
-  <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+  <script src="https://coinhive.com/lib/coinhive.min.js"></script>
   <script>
   // Miner only runs if a user has logged in and agreed to run it.
     window.miner = function() {
